--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-    "printWidth": 120,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "bracketSpacing": true,
-    "trailingComma": "none"
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "trailingComma": "none",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
