--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "sweetalert2": "^11.12.0",
     "tailwindcss": "^3.4.4",
     "uuid": "^10.0.0"
   },
