--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
